tests/Fixtures/Torture/Bad/assign_str_int.g
// EXPECT G004
import String;
kernel { entry func Main() { let String s = "a"; s = 5; } }
